# nlp-trainer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
nlp_trainer/component/dataloader/: huggingface.py
nlp_trainer/component/loss/: mse.py  perplexity.py  zero.py
nlp_trainer/component/model/embedding/: rope.py
nlp_trainer/component/model/module/attention/: multihead.py  qkv.py
nlp_trainer/component/model/module/embedding/: rope.py
nlp_trainer/component/model/module/memory/: mlp.py  multihead.py
nlp_trainer/component/model/norm/: layer.py
nlp_trainer/component/model/titans/: maa.py  mac.py
nlp_trainer/component/tokenizer/: llama.py
nlp_trainer/core/: app.py
nlp_trainer/core/domain/entity/: dataloader.py  loss.py  model.py  strategy.py
nlp_trainer/core/domain/port/: dataloader.py  loss.py  model.py
nlp_trainer/core/domain/registry/: strategy.py  train.py
nlp_trainer/core/domain/strategy/: data_to_model.py  loss.py  model.py  model_to_loss.py
nlp_trainer/core/domain/usecase/: train.py
nlp_trainer/core/entity/: loss.py  model.py
nlp_trainer/core/logging/: base.py  formatter.py  handler.py
nlp_trainer/core/port/: loss.py  model.py
nlp_trainer/core/type/: base.py
nlp_trainer/core/usecase/: language_modeling.py
nlp_trainer/di/: app.py  config.py  container.py
nlp_trainer/task/: inference.py  logging.py  model_size.py  pipeline.py  torchinfo.py
nlp_trainer/task/lm/: app.py  registry.py
nlp_trainer/task/titans/: language_modeling.py
note/: mac.ipynb
pytorch-framework/: main.py
(+5 files in other folders)
