[project]
name = "nlp_trainer"
version = "0.1.0"
description = ""
authors = [
    {name = "Wonbin Kim",email = "kwb0711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
torch = "^2.6.0"
torchinfo = "^1.8.0"
numpy = "^2.2.4"
datasets = "^3.5.0"
pytest = "^8.3.5"
transformers = "^4.51.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

